sort.basic.lessons.sort.basic.insertion.AlgInsertionSort.scala.error
AlgInsertionSort:12: error: not found: value &&
    while(compteur<i)&&(!plusPetitQue(i-compteur,v))
                     ^